Fix center align so calculator is in middle of page

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
     font-weight: 600;
     font-size: 20px;
     background-color: rgb(197, 228, 255);
+    margin: 0;
+    padding: 0;
+    height: 100vh;
 }
 
 .calculator-container {
